Don't spawn zones in chunks (-1,-1)..=(0, 0) Gives time for player to move around before encountering zones. Also change cell to spawn at (0, 0)